--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,15 +11,7 @@ jobs:
       - checkout
       - run:
           name: Build and test
-          command: |
-            set -e
-            ./pipe_build_up_test.sh
-      - run:
-          name: Publish on dockerhub
-          command: |
-            set -e
-            echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
-            docker push cyberdojofoundation/image_dependents:latest
+          command: ./pipe_build_up_test.sh
 
 workflows:
   version: 2
